fixed when scroll doesnt overlap

--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,7 @@ header {
     position: sticky;
     top: 0px;
     background-color: #000000;
+    z-index: 1;
 }
 
 nav {
